// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentMenu should render successfully with update false 1`] = `
<DocumentFragment>
  <div
    class="fixed mt-10 w-72 text-gray-700 bg-white rounded-ibsm shadow-2xl p-4"
  >
    <div
      class="relative text-center mb-2"
    >
      <span
        class="text-sm block relative z-10"
      >
        Attach From...
      </span>
      <svg
        class="absolute right-0 top-0 z-20 cursor-pointer"
        data-testid="attachment-menu-close"
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
    <hr />
    <div
      class="flex flex-col mt-2 text-sm"
    >
      <button
        class="p-2 mt-3 bg-trello-blue-100 hover:bg-trello-blue-200 text-white font-semibold items-center text-sm shadow-sm rounded-sm"
      >
        Upload from computer
      </button>
      <input
        class="hidden"
        data-testid="attachment-menu-file-upload"
        multiple=""
        name="file"
        type="file"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`AttachmentMenu should render successfully with update true 1`] = `
<DocumentFragment>
  <div
    class="fixed w-72 text-gray-700 bg-white rounded-ibsm shadow-2xl p-4"
  >
    <div
      class="relative text-center mb-2"
    >
      <span
        class="text-sm block relative z-10"
      >
        Attach From...
      </span>
      <svg
        class="absolute right-0 top-0 z-20 cursor-pointer"
        data-testid="attachment-menu-close"
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
    <hr />
    <div
      class="flex flex-col mt-2 text-sm"
    >
      <button
        class="p-2 mt-3 bg-trello-blue-100 hover:bg-trello-blue-200 text-white font-semibold items-center text-sm shadow-sm rounded-sm"
      >
        Upload from computer
      </button>
      <input
        class="hidden"
        data-testid="attachment-menu-file-upload"
        multiple=""
        name="file"
        type="file"
      />
    </div>
  </div>
</DocumentFragment>
`;
